; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_hashmap.c_internal_hashmap_first_key_and_value.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_hashmap.c_internal_hashmap_first_key_and_value.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hashmap_base_entry = type { i64 }

@IDX_NIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @internal_hashmap_first_key_and_value(i32* %0, i32 %1, i8** %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8**, align 8
  %8 = alloca %struct.hashmap_base_entry*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8** %2, i8*** %7, align 8
  %12 = load i32*, i32** %5, align 8
  %13 = call i32 @find_first_entry(i32* %12)
  store i32 %13, i32* %11, align 4
  %14 = load i32, i32* %11, align 4
  %15 = load i32, i32* @IDX_NIL, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %23

17:                                               ; preds = %3
  %18 = load i8**, i8*** %7, align 8
  %19 = icmp ne i8** %18, null
  br i1 %19, label %20, label %22

20:                                               ; preds = %17
  %21 = load i8**, i8*** %7, align 8
  store i8* null, i8** %21, align 8
  br label %22

22:                                               ; preds = %20, %17
  store i8* null, i8** %4, align 8
  br label %48

23:                                               ; preds = %3
  %24 = load i32*, i32** %5, align 8
  %25 = load i32, i32* %11, align 4
  %26 = call %struct.hashmap_base_entry* @bucket_at(i32* %24, i32 %25)
  store %struct.hashmap_base_entry* %26, %struct.hashmap_base_entry** %8, align 8
  %27 = load %struct.hashmap_base_entry*, %struct.hashmap_base_entry** %8, align 8
  %28 = getelementptr inbounds %struct.hashmap_base_entry, %struct.hashmap_base_entry* %27, i32 0, i32 0
  %29 = load i64, i64* %28, align 8
  %30 = inttoptr i64 %29 to i8*
  store i8* %30, i8** %9, align 8
  %31 = load i32*, i32** %5, align 8
  %32 = load %struct.hashmap_base_entry*, %struct.hashmap_base_entry** %8, align 8
  %33 = call i8* @entry_value(i32* %31, %struct.hashmap_base_entry* %32)
  store i8* %33, i8** %10, align 8
  %34 = load i32, i32* %6, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %40

36:                                               ; preds = %23
  %37 = load i32*, i32** %5, align 8
  %38 = load i32, i32* %11, align 4
  %39 = call i32 @remove_entry(i32* %37, i32 %38)
  br label %40

40:                                               ; preds = %36, %23
  %41 = load i8**, i8*** %7, align 8
  %42 = icmp ne i8** %41, null
  br i1 %42, label %43, label %46

43:                                               ; preds = %40
  %44 = load i8*, i8** %9, align 8
  %45 = load i8**, i8*** %7, align 8
  store i8* %44, i8** %45, align 8
  br label %46

46:                                               ; preds = %43, %40
  %47 = load i8*, i8** %10, align 8
  store i8* %47, i8** %4, align 8
  br label %48

48:                                               ; preds = %46, %22
  %49 = load i8*, i8** %4, align 8
  ret i8* %49
}

declare dso_local i32 @find_first_entry(i32*) #1

declare dso_local %struct.hashmap_base_entry* @bucket_at(i32*, i32) #1

declare dso_local i8* @entry_value(i32*, %struct.hashmap_base_entry*) #1

declare dso_local i32 @remove_entry(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
